--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ CMD ["nginx", "-g", "daemon off;"]
 </section>
 
 <section>
-	<h2>Immutable Infrastructure</h2>
+	<h2>Deployment</h2>
 			<ul>
 				<li>Servers are deployed once and not changed</li>
 				<li>If they are changed for some reason, they are marked for garbage collection</li>
